--- a/A4/code/public/css/resume.css
+++ b/A4/code/public/css/resume.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
-  color: #868e96;
+  color: #afcae4;
 }
 
 @media (min-width: 992px) {
@@ -20,7 +20,7 @@ h6 {
   font-family: 'Saira Extra Condensed', serif;
   font-weight: 700;
   text-transform: uppercase;
-  color: #343a40;
+  color: #08121b;
 }
 
 h1 {
@@ -44,7 +44,7 @@ h2 {
 }
 
 .list-social-icons a:hover {
-  color: #BD5D38;
+  color: #ba1e1e;
 }
 
 .list-social-icons a .fa-lg {
@@ -56,7 +56,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #c32828;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -131,17 +131,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #8d0e0e !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #bb1c1c !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #be2121;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #82181a;
 }
